@@ -79,6 +79,8 @@
 #define _MouseSelection 0 // 0 - normal (shift+click, ctrl+click), 1 - left click, 2 - right click
 // Use fullpath tab names /////
 #define _FullPathTabNames false
+// User defined folder icons
+#define _UserDefinedFolderIcons true
 
 // Panel Toolbar Checkboxes
 // Panel Toolbar Visible checkbox turned off
